testdata/corset/invalid/permute_invalid_08.lisp
;;error:3:22-27:invalid source column
(defconst X 100)
(defpermutation (Y) ((+ X)))
